--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <svg class="main-icon">
             <use href="./symbol-defs.svg#icon-cloud"></use>
         </svg>
+        <svg class="main-icon">
+            <use href="./symbol-defs.svg#icon-cloud"></use>
+        </svg>
+        <svg class="main-icon">
+            <use href="./symbol-defs.svg#icon-cloud"></use>
+        </svg>
         <h1 class="main-title">Reach out to us!</h1>
         <form class="main-form">
             <input type="text" placeholder="Your name*" required class="main-input">
