add all subject

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <svg class="main-icon">
             <use href="./symbol-defs.svg#icon-cloud"></use>
         </svg>
+        <div class="main-box">
+        <img src="./map.jpg" alt="map" class="main-img">
+    </div>
         <h1 class="main-title">Reach out to us!</h1>
         <form class="main-form">
             <input type="text" placeholder="Your name*" required class="main-input">
@@ -56,6 +59,15 @@
         </form>
     </main>
     <footer>
+        <svg class="footer-icon">
+            <use href="./symbol-defs.svg#icon-pink-left"></use>
+        </svg>
+        <svg class="footer-icon">
+            <use href="./symbol-defs.svg#icon-green-smile"></use>
+        </svg>
+        <svg class="footer-icon">
+            <use href="./symbol-defs.svg#icon-yellow-right"></use>
+        </svg>
         <svg class="footer-social">
             <use href="./symbol-defs.svg#icon-social"></use>
         </svg>
