add real map and fix form

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <use href="./symbol-defs.svg#icon-cloud"></use>
         </svg>
         <div class="main-box">
-        <img src="./map.jpg" alt="map" class="main-img">
+            <iframe class="main-img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24213.899366895002!2d-73.9003516894984!3d40.65771821968264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25d065dd654f3%3A0xea460699be6d9dd4!2z0JjRgdGCINCd0YzRji3QmdC-0YDQuiwg0JHRgNGD0LrQu9C40L0sINCd0YzRji3QmdC-0YDQuiwg0KHQqNCQ!5e0!3m2!1sru!2sua!4v1739457488320!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
         <h1 class="main-title">Reach out to us!</h1>
         <form class="main-form">
